# hikvision_ros_driver

./: .gitignore  Makefile  README.md  build.sh  clean.sh
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/lib/hikvision_ros_driver/: image_publisher_node
catkin_ws/devel/lib/pkgconfig/: hikvision_ros_driver.pc
catkin_ws/devel/share/hikvision_ros_driver/cmake/: hikvision_ros_driverConfig.cmake
catkin_ws/src/hikvision_ros_driver/: CMakeLists.txt  all.sh  build.sh  clean.sh  compute_sync_error.py  package.xml  run.sh  timestamps.txt
catkin_ws/src/hikvision_ros_driver/launch/: image_publisher.launch
catkin_ws/src/hikvision_ros_driver/src/: image_publisher_node.cpp
src/: main.cpp
